--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:./data/sampledata
+    url: jdbc:h2:mem:quotes
     driver-class-name: org.h2.Driver
     username: sa
     password:
